k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-score
  namespace: default
  labels:
    app: fraud-score
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-score
  template:
    metadata:
      labels:
        app: fraud-score
    spec:
      serviceAccountName: fraud-score-sa
      containers:
        - name: fraud-score
          image: us-central1-docker.pkg.dev/fraud-score-503823/repo1/fraud-score:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
