k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-score
  namespace: default
  labels:
    app: fraud-score
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: fraud-score
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
